--- a/hms/src/main/resources/application.properties
+++ b/hms/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+server.port=9099
+spring.datasource.url=jdbc:postgresql://localhost:5432/hms
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=khalid
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
