--- a/hms/src/main/resources/application.properties
+++ b/hms/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9099
-spring.datasource.url=jdbc:postgresql://localhost:5432/hms
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=khalid
+spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
